--- a/lnk2iss/lnk2iss.csproj
+++ b/lnk2iss/lnk2iss.csproj
@@ -51,6 +51,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\VSC.Shared\VSC.Shared.csproj">
+      <Project>{3d35fd39-934e-40d6-8450-d9b030859ef6}</Project>
+      <Name>VSC.Shared</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
